manifests/3-ingress/deployment-v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-workshop
  labels:
    app: k8s-workshop
spec:
  replicas: 1
#  strategy:
#    type: RollingUpdate
#    rollingUpdate:
#      maxSurge: 1
#      maxUnavailable: 0
  selector:
    matchLabels:
      app: k8s-workshop
  template:
    metadata:
      labels:
        app: k8s-workshop
    spec:
      containers:
        - name: k8s-workshop
          image: teamparallax/parallax-beginner-k8s-workshop:2.0.1
          ports:
            - name: http
              containerPort: 3333
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
